# Cuda_cmake_example

./: .gitignore  CMakeLists.txt  README.md  kernels.cu  main.cpp
